# OpportuMatch

./: .env  .gitignore  README.md  backk.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-min.txt  requirements.txt
back/: main.py  pyproject.toml  requirements.txt
back/.chroma/: chroma.sqlite3
back/chroma_rag/: chroma.sqlite3
back/data/: group_baseline.csv  programs.json  rules.json
back/meta/: readiness_meta.json
back/models/: group_baseline.csv  meta.json  new.csv  readiness_model.joblib  test.py
back/rag/: ingest_in_db.py  match_projects.py
back/rag/program_md/: 002-معسكرات-ريادة-الأعمال-الجامعية.md  003-مبادرة-تعزيز-مشاركة-المنشآت-في-توصيل-الأدوية.md  004-مبادرة-دعم-استثمار-المرافق-التعليمية.md  005-مبادرة-دعم-الصيدليات-الصغيرة-والمتوسطة.md  007-برنامج-مسرعات-الأعمال.md  012-برنامج-الشركات-الناشئة-الجامعية.md  013-برامج-وخدمات-التجارة-الإلكترونية.md
back/routers/: eda.py
chatbot/: app.py  config.py  prompts.py
chatbot/db/: supabase.py
chatbot/routers/: rag.py
chroma_rag/: chroma.sqlite3
data/: 001-مسابقة-رواد-أعمال-الجامعات.md  006-برنامج-مسرعات-أعمال-المشاريع-الناشئة-الجامعية.md  008-تمكين-أندية-ريادة-الأعمال-الجامعية.md  009-برنامج-تحفيز-رائدات-الأعمال.md  010-برنامج-طموح--خدمات-المنشآت-متسارعة-النمو.md  011-بوابة-منظومة-الابتكار-التجاري-فكرة.md
frontend/: app.jsx  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
matcher/: build_md_json_index.py  config.py  db.py  extractor.py  prompts.py  retrieval.py  scoring.py  service.py  test_matcher.py  vectorstore.py
(+92 files in other folders)
