[project]
name = "opportumatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "faiss-cpu>=1.12.0",
    "fastapi[all]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "supabase>=2.18.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "back"
]
