[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jose>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "supabase>=2.4.0",
    "fastapi[all]>=0.116.1",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "langchain-openai>=0.3.31",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.12.0",
    "tiktoken>=0.11.0",
    "langchain-text-splitters>=0.3.9",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]
